--- a/pipeline-template-new.yml
+++ b/pipeline-template-new.yml
@@ -70,6 +70,16 @@ resources:
       password: ((docker_registry_password))
       insecure: true
 
+  - name: patched-upstream-warden-cpi-image
+    type: registry-image
+    icon: docker
+    source:
+      repository: ((docker_registry_host))/patched-upstream-warden-cpi
+      tag: latest
+      username: admin
+      password: ((docker_registry_password))
+      insecure: true
+
   - name: bosh-repo
     type: git
     icon: github
@@ -93,16 +103,6 @@ resources:
     icon: docker
     source:
       repository: ((docker_registry_host))/integration
-      tag: latest
-      username: admin
-      password: ((docker_registry_password))
-      insecure: true
-
-  - name: noble-patched-stemcell-image
-    type: registry-image
-    icon: docker
-    source:
-      repository: ((docker_registry_host))/ubuntu-noble-stemcell-patched
       tag: latest
       username: admin
       password: ((docker_registry_password))
@@ -251,65 +251,65 @@ jobs:
 
 
   - name: build-noble-patched-stemcell-image
-    plan:
-      - in_parallel:
-          - get: oci-build-task
-            trigger: false
-      - task: prepare-inline-dockerfile
-        image: oci-build-task
-        config:
-          platform: linux
-          outputs:
-            - name: build-context
-          run:
-            path: sh
-            args:
-              - -exc
-              - |
-                set -eu
-                echo "=== Preparing inline Dockerfile to patch stemcell ==="
-                mkdir -p build-context
-                cat > build-context/Dockerfile <<'DOCKERFILE'
-                FROM ghcr.io/cloudfoundry/ubuntu-noble-stemcell:1.199
-
-                # Remove the specific nftables line (line 9) from /etc/nftables/monit.nft
-                RUN if [ -f /etc/nftables/monit.nft ]; then \
-                  sed -i '9d' /etc/nftables/monit.nft || true; \
-                  fi
-
-                # Ensure file permissions remain correct
-                RUN if [ -f /etc/nftables/monit.nft ]; then chmod 644 /etc/nftables/monit.nft || true; fi
-
-                LABEL maintainer="noble-concourse"
-                DOCKERFILE
-                echo "Dockerfile created"
-                ls -la build-context
-      - task: build-image
+                IMAGE_URL="((docker_registry_host))/ubuntu-noble-stemcell-patched:latest"
+                OUTPUT_DIR="light-stemcell"
+                
+                mkdir -p "$OUTPUT_DIR"
+                
+                # Create stemcell metadata in BOSH standard format
+                cat > "$OUTPUT_DIR/stemcell.MF" <<'STEMCELL_MF'
+                ---
+                name: bosh-warden-ubuntu-noble
+                version: "light"
+                api_version: 3
+                bosh_protocol: '1'
+                sha1: da39a3ee5e6b4b0d3255bfef95601890afd80709
+                operating_system: ubuntu-noble
+                stemcell_formats:
+                - warden-light
+                cloud_properties:
+                  image_reference: "((docker_registry_host))/ubuntu-noble-stemcell-patched:latest"
+                STEMCELL_MF
+                
+                # Create empty image file (required by BOSH stemcell format)
+                touch "$OUTPUT_DIR/image"
+                
+                echo "Stemcell metadata:"
+                cat "$OUTPUT_DIR/stemcell.MF"
+      - task: deploy-with-upstream-warden-cpi
         privileged: true
-        image: oci-build-task
-        timeout: 30m
+        image: upstream-warden-cpi-image
         config:
           platform: linux
           inputs:
-            - name: build-context
-          outputs:
-            - name: image
-          params:
-            CONTEXT: build-context
-            BUILDKIT_PROGRESS: plain
+            - name: zookeeper-release
+            - name: light-stemcell
           run:
-            path: sh
+            path: bash
             args:
               - -c
               - |
-                echo "=== Building patched noble stemcell image ==="
-                mount -t cgroup2 none /sys/fs/cgroup 2>/dev/null || true
-                exec build
-      - put: noble-patched-stemcell-image
-        params:
-          image: image/image.tar
-        get_params:
-          skip_download: true
+                set -euo pipefail
+                
+                echo "=== Upstream Warden CPI Test with Light Stemcell ==="
+                echo "Latest upstream warden-cpi with new garden-cpi release"
+                echo "Using light stemcells for fast deployment"
+                
+                # Mount cgroup filesystem for Garden
+                echo "=== Setting up cgroup v2 ==="
+                mkdir -p /sys/fs/cgroup
+                mount -t cgroup2 none /sys/fs/cgroup || echo "cgroup2 already mounted"
+                
+                # Use upstream start-bosh script
+                echo "=== Starting BOSH Director ==="
+                /usr/local/bin/start-bosh
+                
+                # Source BOSH environment
+                source /tmp/local-bosh/director/env
+                
+                echo "=== BOSH Environment ==="
+                bosh env
+                
 
   #! ========================================================================
   #! DOCKER CPI DEPLOYMENT - Validates BOSH Docker CPI
@@ -901,9 +901,76 @@ jobs:
         get_params:
           skip_download: true
 
-  #! NOTE: build-patched-upstream-warden-cpi-image is disabled
-  #! Reason: Registry-image resources dont produce image.tar when using GET
-  #! Solution: Patches are applied at runtime in deploy-zookeeper-on-upstream-warden task
+  - name: build-patched-upstream-warden-cpi-image
+    plan:
+      - in_parallel:
+          - get: upstream-warden-cpi-image
+            trigger: true
+            passed: [build-upstream-warden-cpi-image]
+          - get: oci-build-task
+      - task: create-patched-dockerfile
+        image: oci-build-task
+        config:
+          platform: linux
+          outputs:
+            - name: build-context
+          run:
+            path: sh
+            args:
+              - -exc
+              - |
+                mkdir -p build-context
+                cat > build-context/Dockerfile << 'DOCKERFILE'
+                FROM 10.246.0.21:5000/upstream-warden-cpi:latest
+
+                # Patch start-bosh to add light stemcell ops-file
+                RUN cat > /tmp/patch.sed << 'SED'
+                /additional_ops_files=""/a\
+                # Add light stemcell ops-file for warden-light format\
+                additional_ops_files="${additional_ops_files} -o /usr/local/warden-light.yml"
+                SED
+
+                RUN sed -i -f /tmp/patch.sed /usr/local/bin/start-bosh
+
+                # Create the warden-light ops-file
+                RUN cat > /usr/local/warden-light.yml << 'OPSFILE'
+                ---
+                - type: replace
+                  path: /stemcells
+                  value:
+                  - alias: default
+                    os: ubuntu-noble
+                    version: light
+                OPSFILE
+
+                DOCKERFILE
+
+                cat build-context/Dockerfile
+      - task: build-image
+        privileged: true
+        image: oci-build-task
+        timeout: 15m
+        config:
+          platform: linux
+          inputs:
+            - name: build-context
+          outputs:
+            - name: image
+          params:
+            CONTEXT: build-context
+            BUILDKIT_PROGRESS: plain
+          run:
+            path: sh
+            args:
+              - -c
+              - |
+                mount -t cgroup2 none /sys/fs/cgroup 2>/dev/null || true
+                exec build
+      - put: patched-upstream-warden-cpi-image
+        params:
+          image: image/image.tar
+        get_params:
+          skip_download: true
 
 
   #! Deploy zookeeper using unmodified upstream warden-cpi image for comparison
@@ -981,7 +1048,7 @@ jobs:
                 mkdir -p /sys/fs/cgroup
                 mount -t cgroup2 none /sys/fs/cgroup || echo "cgroup2 already mounted"
                 
-                # Start BOSH Director (using regular jammy stemcell from bosh.io)
+                # Use upstream start-bosh script
                 echo "=== Starting BOSH Director ==="
                 /usr/local/bin/start-bosh
                 
